--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
   gtag('config', 'UA-141292170-1');
 </script> <script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-1NE5KPRR85"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-1NE5KPRR85');
+</script>
 </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1777977965712027&ev=PageView&noscript=1"/></noscript> <style type="text/css"></style> <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800,italic|Varela+Round:400" rel="stylesheet"> </head> <body> <div id="fb-root"></div> <script>
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
