--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   gtag('js', new Date());
 
   gtag('config', 'G-1NE5KPRR85');
-</script>
+</script><a href="https://api.whatsapp.com/send?phone=5531993304567&text=Gostaria%20de%20Ajuda%20Para%20Comprar%20o%20Forex%20Milion%C3%A1rio%20."><img src="https://i.imgur.com/ryESuZ5.png" style="height:80px; position:fixed; bottom: 25px; right: 25px; z-index:99999;" data-selector="img"></a>
 </script> <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=1777977965712027&ev=PageView&noscript=1"/></noscript> <style type="text/css"></style> <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800,italic|Varela+Round:400" rel="stylesheet"> </head> <body> <div id="fb-root"></div> <script>
   (function(d, s, id) {
     var js, fjs = d.getElementsByTagName(s)[0];
